--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -23,9 +23,16 @@
     -->
     <title>React App</title>
   </head>
+
+  <style>
+    .Global-alignment {
+      padding: 80px 5%;
+      margin: 0px 150px;
+    }
+  </style>
   <body style="margin:0;padding:0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <main id="root"></main>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
